bug 1113065 - spdy should not close session on imglib error r=bagder r=seth